--- a/index.html
+++ b/index.html
@@ -1,30 +1,97 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Your Page Title</title>
+    <title>Valentina Duong</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <!-- links to style sheets, google fonts, etc. go here -->
-
+    <!-- Links to style sheets, Google fonts, etc. -->
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
 
-    <h1>Valentina</h1>
+  <!-- Navigation -->
+  <div class="container border">
+      <div class="row">
+        <div class="col-md-2 border">
+          <h3>Valentina</h3>
+        </div>
+        <div class="col-md-10 border">
+          <div class="col-sm border">
+            <a href="index.html">Work</a>
+          </div>
+          <div class="col-sm border">
+            <a href="about.html">About</a>
+          </div>
+          <div class="col-sm border">
+            <a href="resume.html">Resume</a>
+          </div>
+          <div class="col-sm border">
+            <a href="contact.html">Contact</a>
+        </div>
+      </div>
+  </div>
 
-    <div class="container">
-  <div class="row">
-    <div class="col-md-2 border">
-      Work
+  <!-- Header -->
+    <div class="container border">
+      <h2><center>Valentina Duong</h2></center>
+      <h4><center>Designer & Illustrator</h4></center>
+      <h5><center> Sacramento, CA</h5></center>
     </div>
-    <div class="col-md-2 border">
-      About
-    </div>
-    <div class="col-md-2 border">
-      Contact
+
+  <!-- Filter Buttons -->
+  <div class="container border">
+    <center><button type="button" class="btn btn-outline-primary">Design</button>
+    <button type="button" class="btn btn-primary">Illustration</button>
+  </center>
+  </div>
+
+  <!-- Images -->
+  <div class="container border">
+    <div class="row">
+        <div class="column border">
+          <center>
+            <div class="row">
+              <div class="col">
+                <img src="images/test.jpg"
+                width="371"
+                height="268"/>
+              </div>
+              <div class="col">
+                <img src="images/test.jpg"
+                width="371"
+                height="268"/>
+              </div>
+              <div class="col">
+                <img src="images/test.jpg"
+                width="371"
+                height="268"/>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <img src="images/test.jpg"
+                width="371"
+                height="268"/>
+              </div>
+              <div class="col">
+                <img src="images/test.jpg"
+                width="371"
+                height="268"/>
+              </div>
+              <div class="col">
+                <img src="images/test.jpg"
+                width="371"
+                height="268"/>
+              </div>
+            </div>
+          </center>
+        </div>
     </div>
   </div>
-</div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <!-- Footer -->
+  <div class="column border"><center>&copy; Valentina Duong 2022</center></div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
