--- a/index.html
+++ b/index.html
@@ -1,48 +1,44 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Valentina Duong</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<html lang="en-us">
+      <head>
+            <title>Valentina Duong</title>
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <!-- Links to style sheets, Google fonts, etc. -->
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
+            <!-- Favicon -->
+            <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
+            <!-- Google Fonts -->
+            <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet" type="css/styles.css"/>
+            <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="css/styles.css"/>
+            <!-- CSS Style Sheet -->
+            <link href="css/styles.css" rel="stylesheet"/>
+
+      </head>
+
+      <body>
 
   <!-- Navigation -->
-  <div class="container border">
-      <div class="row">
-        <div class="col-md-2 border">
-          <h3>Valentina</h3>
-        </div>
-        <div class="col-md-10 border">
-          <div class="col-sm border">
-            <a href="index.html">Work</a>
-          </div>
-          <div class="col-sm border">
-            <a href="about.html">About</a>
-          </div>
-          <div class="col-sm border">
-            <a href="resume.html">Resume</a>
-          </div>
-          <div class="col-sm border">
-            <a href="contact.html">Contact</a>
-        </div>
-      </div>
-  </div>
+  <nav class="container border" id="mainNav">
+      <div class="container">
+        <a class="navbar-brand" href="#index.html">Valentina</a>
+            <ul class="navbar-nav ms-auto">
+                <a class="nav-link rounded" href="index.html">Work</a>
+                <a class="nav-link rounded" href="about.html">About</a>
+                <a class="nav-link rounded" href="resume.html">Resume</a>
+                <a class="nav-link rounded" href="contact.html">Contact</a>
+            </ul>
+  </nav>
 
   <!-- Header -->
     <div class="container border">
-      <h2><center>Valentina Duong</h2></center>
-      <h4><center>Designer & Illustrator</h4></center>
-      <h5><center> Sacramento, CA</h5></center>
+      <h2>Valentina Duong</h2>
+      <h4>Designer & Illustrator</h4>
+      <h5>Sacramento, CA</h5>
     </div>
 
   <!-- Filter Buttons -->
   <div class="container border">
-    <center><button type="button" class="btn btn-outline-primary">Design</button>
+    <button type="button" class="btn btn-outline-primary">Design</button>
     <button type="button" class="btn btn-primary">Illustration</button>
-  </center>
   </div>
 
   <!-- Images -->
@@ -68,6 +64,16 @@
               </div>
             </div>
             <div class="row">
+              <div class="col">
+                <img src="images/test.jpg"
+                width="371"
+                height="268"/>
+              </div>
+              <div class="col">
+                <img src="images/test.jpg"
+                width="371"
+                height="268"/>
+              </div>
               <div class="col">
                 <img src="images/test.jpg"
                 width="371"
