--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
       <head>
             <title>Valentina Duong</title>
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
             <!-- Favicon -->
             <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
             <!-- Google Fonts -->
@@ -11,93 +11,94 @@
             <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="css/styles.css"/>
             <!-- CSS Style Sheet -->
             <link href="css/styles.css" rel="stylesheet"/>
-
+            <!-- Debugging -->
+            <style>body div { border: 1px solid red; }</style>
       </head>
 
       <body>
+      <!-- Navigation -->
+        <nav class="navbar navbar-expand-lg" id="mainNav">
+          <div class="container">
+            <a class="navbar-brand" href="#">Valentina</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">Work</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="about.html">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="resume.html">Resume</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
 
-  <!-- Navigation -->
-  <nav class="container border" id="mainNav">
+    <!-- Header -->
+    <div class="container" id="header">
+        <h1>Valentina Duong</h1>
+        <h2>Designer & Illustrator</h2>
+        <h3>Sacramento, CA</h3>
+    </div>
+
+    <!-- Filter Buttons -->
+    <div class="container" id="filter">
+      <button type="button" class="btn">Design</button>
+      <button type="button" class="btn btn-primary">Illustration</button>
+    </div>
+
+    <!-- Work -->
+    <div class="container">
+      <div class="row justify-content-center">
+          <!-- Image 1 -->
+          <div class="col-md-4">
+            <img class="img-fluid pb-2" src="images/test.jpg"
+              alt="Lisa Lisa from JoJo's Bizarre Adventures"/>
+          </div>
+          <!-- Image 2 -->
+          <div class="col-md-4">
+            <img class="img-fluid" src="images/test.jpg"
+              alt="..."/>
+          </div>
+          <!-- Image 3 -->
+          <div class="col-md-4">
+            <img class="img-fluid" src="images/test.jpg"
+              alt="..."/>
+          </div>
+          <!-- Image 4 -->
+
+          <!-- Image 5 -->
+
+          <!-- Image 6 -->
+
+          <!-- Image 7 -->
+
+          <!-- Image 8 -->
+
+          <!-- Image 9 -->
+
+      </div>
+    </div>
+
+    <!-- Footer -->
+    <footer class="footer text-center" id="footer">
       <div class="container">
-        <a class="navbar-brand" href="#index.html">Valentina</a>
-            <ul class="navbar-nav ms-auto">
-                <a class="nav-link rounded" href="index.html">Work</a>
-                <a class="nav-link rounded" href="about.html">About</a>
-                <a class="nav-link rounded" href="resume.html">Resume</a>
-                <a class="nav-link rounded" href="contact.html">Contact</a>
-            </ul>
-  </nav>
+          <p>&copy; Valentina Duong 2022</p>
+          <!-- Twitter -->
+          <a style="color: white;" href="https://twitter.com/rmkafu" role="button"><i class="bi bi-twitter"></i></a>
+          <!-- Instagram -->
+          <a style="color: white;" href="https://www.instagram.com/rmkafu/" role="button"><i class="bi bi-instagram"></i></a>
+      </div>
+    </footer>
 
-  <!-- Header -->
-    <div class="container border">
-      <h2>Valentina Duong</h2>
-      <h4>Designer & Illustrator</h4>
-      <h5>Sacramento, CA</h5>
-    </div>
-
-  <!-- Filter Buttons -->
-  <div class="container border">
-    <button type="button" class="btn btn-outline-primary">Design</button>
-    <button type="button" class="btn btn-primary">Illustration</button>
-  </div>
-
-  <!-- Images -->
-  <div class="container border">
-    <div class="row">
-        <div class="column border">
-          <center>
-            <div class="row">
-              <div class="col">
-                <img src="images/test.jpg"
-                width="371"
-                height="268"/>
-              </div>
-              <div class="col">
-                <img src="images/test.jpg"
-                width="371"
-                height="268"/>
-              </div>
-              <div class="col">
-                <img src="images/test.jpg"
-                width="371"
-                height="268"/>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col">
-                <img src="images/test.jpg"
-                width="371"
-                height="268"/>
-              </div>
-              <div class="col">
-                <img src="images/test.jpg"
-                width="371"
-                height="268"/>
-              </div>
-              <div class="col">
-                <img src="images/test.jpg"
-                width="371"
-                height="268"/>
-              </div>
-              <div class="col">
-                <img src="images/test.jpg"
-                width="371"
-                height="268"/>
-              </div>
-              <div class="col">
-                <img src="images/test.jpg"
-                width="371"
-                height="268"/>
-              </div>
-            </div>
-          </center>
-        </div>
-    </div>
-  </div>
-
-  <!-- Footer -->
-  <div class="column border"><center>&copy; Valentina Duong 2022</center></div>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    </body>
 </html>
