--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,58 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Contact</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<html lang="en-us">
+      <head>
+            <title>Valentina Duong &#8208; Contact</title>
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+            <!-- Favicon -->
+            <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
+            <!-- Google Fonts -->
+            <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet" type="css/styles.css"/>
+            <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="css/styles.css"/>
+            <!-- CSS Style Sheet -->
+            <link href="css/styles.css" rel="stylesheet"/>
+            <!-- Debugging -->
+            <style>body div { border: 1px solid red; }</style>
+      </head>
 
-    <!-- links to style sheets, google fonts, etc. go here -->
+      <body>
+      <!-- Navigation -->
+        <nav class="navbar navbar-expand-lg" id="mainNav">
+          <div class="container">
+            <a class="navbar-brand" href="index.html">Valentina</a>
+              <ul class="nav justify-content-center nav-pills">
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="index.html">Work</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="about.html">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="resume.html">Resume</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active rounded-pill" href="contact.html">Contact</a>
+                </li>
+              </ul>
+          </div>
+        </nav>
 
-  </head>
-  <body>
-
-    <!-- your site content goes here -->
+        <!-- Footer -->
+        <footer class="footer text-center p-3" id="footer">
+          <div class="container">
+                <div class="container">
+                  © Valentina Duong 2022
+                </div>
+                <div class="container">
+                    <!-- Twitter -->
+                    <a style="color: white;" href="https://twitter.com/rmkafu" role="button"><i class="bi bi-twitter"></i></a>
+                     &nbsp;
+                    <!-- Instagram -->
+                    <a style="color: white;" href="https://www.instagram.com/rmkafu/" role="button"><i class="bi bi-instagram"></i></a>
+                </div>
+          </div>
+        </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  </body>
+    </body>
 </html>
