--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
       <head>
-            <title>Valentina Duong</title>
+            <title>Valentina Duong &#8208; Work</title>
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
             <!-- Favicon -->
@@ -19,14 +19,10 @@
       <!-- Navigation -->
         <nav class="navbar navbar-expand-lg" id="mainNav">
           <div class="container">
-            <a class="navbar-brand" href="#">Valentina</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <a class="navbar-brand" href="index.html">Valentina</a>
+              <ul class="nav justify-content-center nav-pills">
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html">Work</a>
+                  <a class="nav-link active rounded-pill" aria-current="page" href="index.html">Work</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="about.html">About</a>
@@ -38,7 +34,6 @@
                   <a class="nav-link" href="contact.html">Contact</a>
                 </li>
               </ul>
-            </div>
           </div>
         </nav>
 
@@ -49,30 +44,57 @@
         <h3>Sacramento, CA</h3>
     </div>
 
-    <!-- Filter Buttons -->
-    <div class="container" id="filter">
-      <button type="button" class="btn">Design</button>
-      <button type="button" class="btn btn-primary">Illustration</button>
-    </div>
-
     <!-- Work -->
-    <div class="container">
+    <div class="container" id="filter">
       <div class="row justify-content-center">
-          <!-- Image 1 -->
-          <div class="col-md-4">
-            <img class="img-fluid pb-2" src="images/test.jpg"
-              alt="Lisa Lisa from JoJo's Bizarre Adventures"/>
+        <ul class="nav nav-pills mt-2 mb-2 justify-content-center" id="pills-tab" role="tablist">
+          <li class="nav-item" role="presentation">
+            <button class="nav-link rounded-pill" id="pills-design-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Design</button>
+          </li>
+          <li class="nav-item" role="presentation">
+            <button class="nav-link active rounded-pill" id="pills-illustration-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Illustration</button>
+          </li>
+        </ul>
+        <div class="tab-content" id="pills-tabContent">
+          <div class="tab-pane fade show active" id="pills-design" role="tabpanel" aria-labelledby="pills-home-tab">
+            <div class="row">
+              <div class="col-md-4 pt-2 pb-2">
+                <!-- Image 1 -->
+                <img class="img-fluid rounded" src="images/test.jpg" alt="Lisa Lisa from JoJo's Bizarre Adventures">
+              </div>
+              <div class="col-md-4 pt-2 pb-2 pl-2 pr-2">
+                <!-- Image 2 -->
+                <img class="img-fluid rounded" src="images/test.jpg"
+                  alt="..."/>
+              </div>
+              <div class="col-md-4 pt-2 pb-2 pl-2 pr-2">
+                <!-- Image 3 -->
+                <img class="img-fluid rounded" src="images/test.jpg"
+                  alt="..."/>
+              </div>
+            </div>
           </div>
-          <!-- Image 2 -->
-          <div class="col-md-4">
-            <img class="img-fluid" src="images/test.jpg"
-              alt="..."/>
+          <div class="tab-pane fade" id="pills-illustration" role="tabpanel" aria-labelledby="pills-profile-tab">
+            <div class="row">
+              <div class="col-md-4 pt-2 pb-2 pl-2 pr-2">
+                <!-- Image 1 -->
+                <img class="img-fluid rounded" src="images/test.jpg"
+                  alt="Lisa Lisa from JoJo's Bizarre Adventures"/>
+              </div>
+              <div class="col-md-4 pt-2 pb-2 pl-2 pr-2">
+                <!-- Image 2 -->
+                <img class="img-fluid rounded" src="images/test.jpg"
+                  alt="..."/>
+              </div>
+              <div class="col-md-4 pt-2 pb-2 pl-2 pr-2">
+                <!-- Image 3 -->
+                <img class="img-fluid rounded" src="images/test.jpg"
+                  alt="..."/>
+              </div>
+            </div>
           </div>
-          <!-- Image 3 -->
-          <div class="col-md-4">
-            <img class="img-fluid" src="images/test.jpg"
-              alt="..."/>
-          </div>
+        </div>
+
           <!-- Image 4 -->
 
           <!-- Image 5 -->
@@ -89,13 +111,18 @@
     </div>
 
     <!-- Footer -->
-    <footer class="footer text-center" id="footer">
+    <footer class="footer text-center p-3" id="footer">
       <div class="container">
-          <p>&copy; Valentina Duong 2022</p>
-          <!-- Twitter -->
-          <a style="color: white;" href="https://twitter.com/rmkafu" role="button"><i class="bi bi-twitter"></i></a>
-          <!-- Instagram -->
-          <a style="color: white;" href="https://www.instagram.com/rmkafu/" role="button"><i class="bi bi-instagram"></i></a>
+            <div class="container">
+              © Valentina Duong 2022
+            </div>
+            <div class="container">
+                <!-- Twitter -->
+                <a style="color: white;" href="https://twitter.com/rmkafu" role="button"><i class="bi bi-twitter"></i></a>
+                 &nbsp;
+                <!-- Instagram -->
+                <a style="color: white;" href="https://www.instagram.com/rmkafu/" role="button"><i class="bi bi-instagram"></i></a>
+            </div>
       </div>
     </footer>
 
