--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
       <head>
-            <title>Valentina Duong &#8208; Resume</title>
+            <title>Valentina Duong &#8208; Contact</title>
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
             <!-- Favicon -->
@@ -22,13 +22,13 @@
             <a class="navbar-brand" href="index.html">Valentina</a>
               <ul class="nav justify-content-center nav-pills">
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="index.html">Work</a>
+                  <a class="nav-link active rounded-pill" aria-current="page" href="index.html">Work</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active rounded-pill" href="resume.html">Resume</a>
+                  <a class="nav-link" href="resume.html">Resume</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">Contact</a>
