--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
       <head>
-            <title>Valentina Duong &#8208; About</title>
+            <title>About &#8211; Valentina Duong</title>
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
             <!-- Favicon -->
@@ -36,6 +36,13 @@
               </ul>
           </div>
         </nav>
+
+        <div class="container" id="about">
+          <div class="col-lg-6">
+            <h1>Hello!</h1>
+            <p>My name is Valentina, a designer and illustrator based in Sacramento, California. I’m currently a graphic design BFA candidate and a design intern for The Lab, an on-campus graphic design studio of Union WELL, Inc. at Sacramento State. In my free time, I like to draw, play video games, or watch movies and TV shows.</p>
+          </div>
+        </div>
 
         <!-- Footer -->
         <footer class="footer text-center p-3" id="footer">
