--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
       <head>
-            <title>Valentina Duong &#8208; Work</title>
+            <title>Valentina Duong</title>
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
             <!-- Favicon -->
@@ -9,7 +9,7 @@
             <!-- Google Fonts -->
             <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet" type="css/styles.css"/>
             <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="css/styles.css"/>
-            <!-- CSS Style Sheet -->
+            <!-- CSS style sheet -->
             <link href="css/styles.css" rel="stylesheet"/>
             <!-- Debugging -->
             <style>body div { border: 1px solid red; }</style>
@@ -19,7 +19,9 @@
       <!-- Navigation -->
         <nav class="navbar navbar-expand-lg" id="mainNav">
           <div class="container">
+            <!-- Navbar brand -->
             <a class="navbar-brand" href="index.html">Valentina</a>
+            <!-- Nav pills -->
               <ul class="nav justify-content-center nav-pills">
                 <li class="nav-item">
                   <a class="nav-link active rounded-pill" aria-current="page" href="index.html">Work</a>
@@ -52,60 +54,124 @@
             <button class="nav-link rounded-pill" id="pills-design-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Design</button>
           </li>
           <li class="nav-item" role="presentation">
-            <button class="nav-link active rounded-pill" id="pills-illustration-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Illustration</button>
+            <button class="nav-link active rounded-pill" id="pills-illustration-tab" data-bs-toggle="pill" data-bs-target="#pills-illustration" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Illustration</button>
           </li>
         </ul>
         <div class="tab-content" id="pills-tabContent">
-          <div class="tab-pane fade show active" id="pills-design" role="tabpanel" aria-labelledby="pills-home-tab">
-            <div class="row">
-              <div class="col-md-4 pt-2 pb-2">
-                <!-- Image 1 -->
-                <img class="img-fluid rounded" src="images/test.jpg" alt="Lisa Lisa from JoJo's Bizarre Adventures">
-              </div>
-              <div class="col-md-4 pt-2 pb-2 pl-2 pr-2">
+          <!-- Illustration pills -->
+          <div class="tab-pane fade show active" id="pills-illustration" role="tabpanel" aria-labelledby="pills-illustration-tab">
+            <div class="row mt-4 mb-4 gap-3">
+                 <!-- Image 1 -->
+                    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 px-0" id="image-preview">
+                        <a href="portfolio.html">
+                          <div class="hovereffect">
+                          <img class="img-fluid" src="images/converted/JJBA_Lisa_Lisa_preview.jpg" alt="Lisa Lisa from JoJo's Bizarre Adventures"/>
+                            <div class="overlay">
+                              <h2>Lisa Lisa</h2>
+                              <p>Fan Art</p>
+                            </div>
+                          </div>
+                        </a>
+                    </div>
                 <!-- Image 2 -->
-                <img class="img-fluid rounded" src="images/test.jpg"
-                  alt="..."/>
-              </div>
-              <div class="col-md-4 pt-2 pb-2 pl-2 pr-2">
+                    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 px-0" id="image-preview">
+                      <a href="portfolio.html">
+                        <div class="hovereffect">
+                        <img class="img-fluid" src="images/converted/mermaid_preview.jpg" alt="A lone mermaid in the deep ocean"/>
+                          <div class="overlay">
+                            <h2>The Lonesome Deep</h2>
+                            <p>Original</p>
+                          </div>
+                        </div>
+                      </a>
+                    </div>
                 <!-- Image 3 -->
-                <img class="img-fluid rounded" src="images/test.jpg"
-                  alt="..."/>
-              </div>
-            </div>
-          </div>
-          <div class="tab-pane fade" id="pills-illustration" role="tabpanel" aria-labelledby="pills-profile-tab">
-            <div class="row">
-              <div class="col-md-4 pt-2 pb-2 pl-2 pr-2">
-                <!-- Image 1 -->
-                <img class="img-fluid rounded" src="images/test.jpg"
-                  alt="Lisa Lisa from JoJo's Bizarre Adventures"/>
-              </div>
-              <div class="col-md-4 pt-2 pb-2 pl-2 pr-2">
-                <!-- Image 2 -->
-                <img class="img-fluid rounded" src="images/test.jpg"
-                  alt="..."/>
-              </div>
-              <div class="col-md-4 pt-2 pb-2 pl-2 pr-2">
-                <!-- Image 3 -->
-                <img class="img-fluid rounded" src="images/test.jpg"
-                  alt="..."/>
-              </div>
+                   <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 px-0" id="image-preview">
+                     <a href="portfolio.html">
+                       <div class="hovereffect">
+                         <img class="img-fluid" src="images/converted/abstract_preview.jpg" alt="Abstract brush stroke painting"/>
+                         <div class="overlay">
+                           <h2>Youthful Days</h2>
+                           <p>Original</p>
+                         </div>
+                       </div>
+                     </a>
+                   </div>
+               <!-- Image 4 -->
+                  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 px-0" id="image-preview">
+                    <a href="portfolio.html">
+                      <div class="hovereffect">
+                        <img class="img-fluid" src="images/converted/FFXIV_Ukyou_preview.jpg" alt="Player character from Final Fantasy XIV"/>
+                        <div class="overlay">
+                          <h2>Ukyou</h2>
+                          <p>Original</p>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+              <!-- Image 5 -->
+                   <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 px-0" id="image-preview">
+                     <a href="portfolio.html">
+                       <div class="hovereffect">
+                         <img class="img-fluid" src="images/converted/FFXIV_Dolce_Nierhart_preview.jpg" alt="Player character from Final Fantasy XIV"/>
+                         <div class="overlay">
+                           <h2>Dolce Nierhart</h2>
+                           <p>Fan Art</p>
+                         </div>
+                       </div>
+                     </a>
+                  </div>
+              <!-- Image 6 -->
+                  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 px-0" id="image-preview">
+                    <a href="portfolio.html">
+                      <div class="hovereffect">
+                        <img class="img-fluid" src="images/converted/Rina_Sawayama_preview.jpg" alt="Japanese-British singer Rina Sawayama"/>
+                        <div class="overlay">
+                          <h2>Rina Sawayama</h2>
+                          <p>Fan Art</p>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+            <!-- Image 7 -->
+                 <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 px-0" id="image-preview">
+                   <a href="portfolio.html">
+                     <div class="hovereffect">
+                         <img class="img-fluid" src="images/converted/BnS_Rolun_preview.jpg" alt="Player character from Blade & Soul"/>
+                       <div class="overlay">
+                         <h2>Rolun</h2>
+                         <p>Original</p>
+                       </div>
+                     </div>
+                   </a>
+                </div>
+            <!-- Image 8 -->
+                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 px-0" id="image-preview">
+                  <a href="portfolio.html">
+                    <div class="hovereffect">
+                      <img class="img-fluid" src="images/converted/BnS_couple_preview.jpg" alt="Player character couple from Blade & Soul"/>
+                      <div class="overlay">
+                        <h2>Yinghua & Guiying</h2>
+                        <p>Original</p>
+                      </div>
+                    </div>
+                  </a>
+               </div>
+            <!-- Image 9 -->
+                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 px-0" id="image-preview">
+                  <a href="portfolio.html">
+                    <div class="hovereffect">
+                      <img class="img-fluid" src="images/converted/MHA_Izuku_Midoriya_preview.jpg" alt="Izuku Midoriya from My Hero Academia"/>
+                      <div class="overlay">
+                        <h2>Izuku Midoriya</h2>
+                        <p>Fan Art</p>
+                      </div>
+                    </div>
+                  </a>
+               </div>
             </div>
           </div>
         </div>
-
-          <!-- Image 4 -->
-
-          <!-- Image 5 -->
-
-          <!-- Image 6 -->
-
-          <!-- Image 7 -->
-
-          <!-- Image 8 -->
-
-          <!-- Image 9 -->
 
       </div>
     </div>
