--- a/about.html
+++ b/about.html
@@ -12,17 +12,20 @@
             <!-- CSS Style Sheet -->
             <link href="css/styles.css" rel="stylesheet"/>
             <!-- Debugging -->
-            <style>body div { border: 1px solid red; }</style>
+            <!-- <style>body div { border: 1px solid red; }</style> -->
       </head>
 
       <body>
-      <!-- Navigation -->
+        <!-- Navigation -->
         <nav class="navbar navbar-expand-lg" id="mainNav">
           <div class="container">
             <a class="navbar-brand" href="index.html">Valentina</a>
               <ul class="nav justify-content-center nav-pills">
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="index.html">Work</a>
+                  <a class="nav-link" href="work.html">Work</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="index.html">Play</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active rounded-pill" href="about.html">About</a>
@@ -37,11 +40,23 @@
           </div>
         </nav>
 
+        <!-- About me -->
         <div class="container" id="about">
-          <div class="col-lg-6">
-            <h1>Hello!</h1>
-            <p>My name is Valentina, a designer and illustrator based in Sacramento, California. I’m currently a graphic design BFA candidate and a design intern for The Lab, an on-campus graphic design studio of Union WELL, Inc. at Sacramento State. In my free time, I like to draw, play video games, or watch movies and TV shows.</p>
-          </div>
+            <row>
+              <div class="col-md-6 mb-4">
+                <img width="300" height="300" class="img-fluid rounded-circle" src="images/Jolyne_Cujoh.jpg" alt="Jolyne Cujoh from JoJo's Bizarre Adventures"/>
+              </div>
+            <div class="col-md-6 mt-3 mb-3">
+              <h1>Hello!</h1>
+              <p> My name is Valentina, a designer and illustrator based in Sacramento, California.
+                  I’m currently a graphic design BFA candidate and a design intern for The Lab, an on-campus graphic design studio of Union WELL, Inc. at Sacramento State.
+                <br></br> Like many designers and illustrators, my interest in graphic design began with my passion for art and stories since childhood.
+                          I'm always eager to learn and be inspired by new things. As a creative, I hope to also spark joy and inspiration with my works.
+                <br></br> In my free time, I enjoy drawing, playing video games, or watching movies and TV shows. My favorites are JoJo's Bizarre Adventures and FINAL FANTASY XIV.
+                <br></br> Find me on <a href="https://twitter.com/rmkafu">Twitter</a> and <a href="https://www.instagram.com/rmkafu/">Instagram</a> @rmkafu.
+              </p>
+            </div>
+          </row>
         </div>
 
         <!-- Footer -->
