--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
       <head>
-            <title>Valentina Duong &#8208; Contact</title>
+            <title>Valentina Duong</title>
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
             <!-- Favicon -->
@@ -16,13 +16,16 @@
       </head>
 
       <body>
-      <!-- Navigation -->
+        <!-- Navigation -->
         <nav class="navbar navbar-expand-lg" id="mainNav">
           <div class="container">
             <a class="navbar-brand" href="index.html">Valentina</a>
               <ul class="nav justify-content-center nav-pills">
                 <li class="nav-item">
-                  <a class="nav-link active rounded-pill" aria-current="page" href="index.html">Work</a>
+                  <a class="nav-link" href="work.html">Work</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active rounded-pill" aria-current="page" href="index.html">Play</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="about.html">About</a>
@@ -36,6 +39,11 @@
               </ul>
           </div>
         </nav>
+
+        <!-- Carousel -->
+        <div class="container">
+
+        </div>
 
         <!-- Footer -->
         <footer class="footer text-center p-3" id="footer">
