--- a/resume.html
+++ b/resume.html
@@ -16,13 +16,16 @@
       </head>
 
       <body>
-      <!-- Navigation -->
+        <!-- Navigation -->
         <nav class="navbar navbar-expand-lg" id="mainNav">
           <div class="container">
             <a class="navbar-brand" href="index.html">Valentina</a>
               <ul class="nav justify-content-center nav-pills">
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="index.html">Work</a>
+                  <a class="nav-link" href="work.html">Work</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="index.html">Play</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="about.html">About</a>
