--- a/work.html
+++ b/work.html
@@ -22,10 +22,10 @@
               <a class="navbar-brand" href="index.html">Valentina</a>
                 <ul class="nav justify-content-center nav-pills">
                   <li class="nav-item">
-                    <a class="nav-link" href="work.html">Work</a>
+                    <a class="nav-link active rounded-pill" href="work.html">Work</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active rounded-pill" aria-current="page" href="index.html">Play</a>
+                    <a class="nav-link" aria-current="page" href="index.html">Play</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="about.html">About</a>
