--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                   I’m currently a graphic design BFA candidate and a design intern for The Lab, an on-campus graphic design studio of Union WELL, Inc. at Sacramento State.
                 <br></br> Like many designers and illustrators, my interest in graphic design began with my passion for art and stories since childhood.
                           I'm always eager to learn and be inspired by new things. As a creative, I hope to also spark joy and inspiration with my works.
-                <br></br> In my free time, I enjoy drawing, playing video games, or watching movies and TV shows. My favorites are JoJo's Bizarre Adventures and FINAL FANTASY XIV.
+                <br></br> In my free time, I enjoy drawing, playing video games, or watching movies and TV shows. My favorites are JoJo's Bizarre Adventure and Final Fantasy XIV.
                 <br></br> Find me on <a href="https://twitter.com/rmkafu">Twitter</a> and <a href="https://www.instagram.com/rmkafu/">Instagram</a> @rmkafu.
               </p>
             </div>
