--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
         <div class="container">
           <div class="col-md-6 mt-3 mb-4">
             <h1>I'd love to hear from you!</h1>
-            <p>Please leave your message and I'll be in touch as soon as possible. Thanks!</p>
+            <p>Please leave your message below and I'll be in touch as soon as possible. Thanks!</p>
           </div>
           <div class="col-md-6 mt-3 mb-4" id="contact">
             <form class="needs-validation" novalidate>
