--- a/about.html
+++ b/about.html
@@ -18,26 +18,26 @@
       <body>
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg" id="mainNav">
-          <div class="container">
-            <a class="navbar-brand" href="index.html">Valentina</a>
-              <ul class="nav justify-content-center nav-pills">
-                <li class="nav-item">
-                  <a class="nav-link" href="work.html">Work</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="index.html">Play</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active rounded-pill" href="about.html">About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="resume.html">Resume</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-              </ul>
-          </div>
+            <div class="container">
+              <a class="navbar-brand" href="index.html">Valentina</a>
+                <ul class="nav justify-content-center nav-pills">
+                  <li class="nav-item">
+                    <a class="nav-link" href="work.html">Work</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="index.html">Play</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active rounded-pill" href="about.html">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="work.html">Resume</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                  </li>
+                </ul>
+            </div>
         </nav>
 
         <!-- About me -->
@@ -53,7 +53,7 @@
               <p>Like many designers and illustrators, my interest in graphic design began with my passion for art and stories since childhood.
                 I'm always eager to learn and be inspired by new things. As a creative, I hope to also spark joy and inspiration with my works.</p>
               <p>In my free time, I enjoy drawing, playing video games, or watching movies and TV shows. My favorites are JoJo's Bizarre Adventure and Final Fantasy XIV.</p>
-              <p>Follow me @rmkafu on <a href="https://twitter.com/rmkafu">Twitter</a> and <a href="https://www.instagram.com/rmkafu/">Instagram</a>.</p>
+              <p>Follow me @rmkafu on <a href="https://twitter.com/rmkafu" target="_blank">Twitter</a> and <a href="https://www.instagram.com/rmkafu/" target="_blank">Instagram</a>.</p>
             </div>
           </row>
         </div>
