--- a/portfolio.html
+++ b/portfolio.html
@@ -12,37 +12,95 @@
             <!-- CSS Style Sheet -->
             <link href="css/styles.css" rel="stylesheet"/>
             <!-- Debugging -->
-            <style>body div { border: 1px solid red; }</style>
+            <!-- <style>body div { border: 1px solid red; }</style> -->
       </head>
 
       <body>
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg" id="mainNav">
-          <div class="container">
-            <a class="navbar-brand" href="index.html">Valentina</a>
-              <ul class="nav justify-content-center nav-pills">
-                <li class="nav-item">
-                  <a class="nav-link" href="work.html">Work</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active rounded-pill" aria-current="page" href="index.html">Play</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="about.html">About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="resume.html">Resume</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-              </ul>
-          </div>
+            <div class="container">
+              <a class="navbar-brand" href="index.html">Valentina</a>
+                <ul class="nav justify-content-center nav-pills">
+                  <li class="nav-item">
+                    <a class="nav-link" href="work.html">Work</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active rounded-pill" aria-current="page" href="index.html">Play</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="about.html">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="work.html">Resume</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                  </li>
+                </ul>
+            </div>
         </nav>
 
         <!-- Carousel -->
-        <div class="container">
-
+        <div class="container mt-2 mb-2" id="carousel">
+          <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" aria-label="Slide 8"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8" aria-label="Slide 9"></button>
+            </div>
+            <div class="carousel-inner">
+              <!-- Image 1 -->
+              <div class="carousel-item active">
+                <img src="images/converted/JJBA_Lisa_Lisa_preview.jpg" class="d-block w-100" alt="Lisa Lisa from JoJo's Bizarre Adventures">
+              </div>
+              <!-- Image 2 -->
+              <div class="carousel-item">
+                <img src="images/converted/mermaid_preview.jpg" class="d-block w-100" alt="A lone mermaid in the deep ocean">
+              </div>
+              <!-- Image 3 -->
+              <div class="carousel-item">
+                <img src="images/converted/abstract_preview.jpg" class="d-block w-100" alt="Abstract brush stroke painting">
+              </div>
+              <!-- Image 4 -->
+              <div class="carousel-item">
+                <img src="images/converted/FFXIV_Ukyou_preview.jpg" class="d-block w-100" alt="Player character from Final Fantasy XIV">
+              </div>
+              <!-- Image 5 -->
+              <div class="carousel-item">
+                <img src="images/converted/FFXIV_Dolce_Nierhart_preview.jpg" class="d-block w-100" alt="Player character from Final Fantasy XIV">
+              </div>
+              <!-- Image 6 -->
+              <div class="carousel-item">
+                <img src="images/converted/Rina_Sawayama_preview.jpg" class="d-block w-100" alt="Japanese-British singer Rina Sawayama">
+              </div>
+              <!-- Image 7 -->
+              <div class="carousel-item">
+                <img src="images/converted/BnS_Rolun_preview.jpg" class="d-block w-100" alt="Player character from Blade & Soul">
+              </div>
+              <!-- Image 8 -->
+              <div class="carousel-item">
+                <img src="images/converted/BnS_couple_preview.jpg" class="d-block w-100" alt="Player character couple from Blade & Soul">
+              </div>
+              <!-- Image 9 -->
+              <div class="carousel-item">
+                <img src="images/converted/MHA_Izuku_Midoriya_preview.jpg" class="d-block w-100" alt="Izuku Midoriya from My Hero Academia">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         </div>
 
         <!-- Footer -->
