--- a/resume.html
+++ b/resume.html
@@ -18,26 +18,26 @@
       <body>
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg" id="mainNav">
-          <div class="container">
-            <a class="navbar-brand" href="index.html">Valentina</a>
-              <ul class="nav justify-content-center nav-pills">
-                <li class="nav-item">
-                  <a class="nav-link" href="work.html">Work</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="index.html">Play</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="about.html">About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active rounded-pill" href="resume.html">Resume</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-              </ul>
-          </div>
+            <div class="container">
+              <a class="navbar-brand" href="index.html">Valentina</a>
+                <ul class="nav justify-content-center nav-pills">
+                  <li class="nav-item">
+                    <a class="nav-link" href="work.html">Work</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="index.html">Play</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="about.html">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active rounded-pill" href="work.html">Resume</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                  </li>
+                </ul>
+            </div>
         </nav>
 
         <!-- Footer -->
